fix: redis cache manager 설정 변경